welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:34: error: value Orange is not a member of object java.awt.Color
  faitPousserFleur(Color.Orange)
                         ^